--- a/package.json
+++ b/package.json
@@ -5,12 +5,19 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit"
+    "start:server": "nodemon server/server.js",
+    "dev": "concurrently --names \"VUE,SERVER\" --prefix-colors \"cyan,green\" \"npm run serve\" \"npm run start:server\""
   },
   "dependencies": {
+    "axios": "^1.6.7",
+    "bootstrap-vue-3": "^0.5.1",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.3",
+    "primevue": "^3.49.1",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
@@ -20,7 +27,9 @@
     "@vue/test-utils": "^2.0.0-0",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
     "babel-jest": "^27.0.6",
-    "jest": "^27.0.5"
+    "concurrently": "^8.2.2",
+    "jest": "^27.0.5",
+    "nodemon": "^3.1.0"
   },
   "browserslist": [
     "> 1%",
